[gd_scene load_steps=3 format=3 uid="uid://cnh8fn5l0ynkq"]

[ext_resource type="Script" path="res://Settings.gd" id="1_ikonx"]
[ext_resource type="Theme" uid="uid://dyv68n2h7j1yp" path="res://MainTheme.tres" id="2_7i2wx"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ikonx")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.627451, 0.937255, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -117.0
offset_top = -88.0
offset_right = 117.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2

[node name="Video" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_7i2wx")
theme_override_font_sizes/font_size = 75
text = "Видео
"

[node name="Sound" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_7i2wx")
theme_override_font_sizes/font_size = 75
text = "Звук
"

[node name="BackButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0.568627)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.479
anchor_top = 0.753
anchor_right = 0.529
anchor_bottom = 0.815
offset_left = -7.80804
offset_top = -7.944
offset_right = -0.408081
offset_bottom = 1.87994
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_7i2wx")
text = "Назад

"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="VBoxContainer/Video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="VBoxContainer/Sound" to="." method="_on_sound_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
